// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateOpinion /> when the query is on desktop should render a FOR opinion 1`] = `
<div
  className="sc-bdnylx dsPyrQ DebateOpinion___StyledCard-sc-1ua3st0-0 dYPUuK"
>
  <div
    className="sc-bdnylx Tag__TagInner-sc-1e1bibo-0 Tag___StyledTagInner-sc-1e1bibo-1 gKROGE gJWoeF jxKYEO DebateOpinion___StyledTag-sc-1ua3st0-1 gvZJlt"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    title=""
  >
    <p
      className="sc-bdnylx dcRxfY Tag___StyledText-sc-1e1bibo-3 iIxMlD"
    >
      <span
        className="sc-bdnylx cISkos"
      >
        opinion.for
      </span>
    </p>
  </div>
  <div
    className="sc-bdnylx DebateOpinion___StyledAppBox-sc-1ua3st0-2 bQeIg tISUQ"
  />
  <div
    className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 gqMqqJ"
  >
    <div
      className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 geAHBO dzUdRG"
    >
      <div
        className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 jaHnoK Avatar__AvatarInner-m2mkt1-0 bgEkQe"
        style={
          Object {
            "background": "#2d867a",
            "color": undefined,
          }
        }
      >
        <img
          alt="Agui le penseur"
          className="sc-bdnylx Avatar___StyledAppBox-m2mkt1-1 jMFVjo eQJcjv"
          src="<mock-value-for-field-\\"url\\">"
          title="Agui le penseur"
        />
      </div>
      <div
        className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 dXvIkN"
      >
        <p
          className="sc-bdnylx iOYGli"
        >
          Agui le penseur
        </p>
        <p
          className="sc-bdnylx dJflcy"
        >
          Jsuis né dans les favela au brésil
        </p>
      </div>
    </div>
    <div
      className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 dXvIkN bgDJln"
    >
      <h4
        className="sc-bdnylx fzwkzv"
      >
        Je suis pour
      </h4>
      <p
        className="sc-bdnylx fNJNWw"
      >
        <div
          className=" ql-editor"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
            }
          }
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`<DebateOpinion /> when the query is on desktop should render an AGAINST opinion 1`] = `
<div
  className="sc-bdnylx dsPyrQ DebateOpinion___StyledCard-sc-1ua3st0-0 dYPUuK"
>
  <div
    className="sc-bdnylx Tag__TagInner-sc-1e1bibo-0 Tag___StyledTagInner-sc-1e1bibo-1 gKROGE gJWoeF jxKYEO DebateOpinion___StyledTag-sc-1ua3st0-1 gvZJlt"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    title=""
  >
    <p
      className="sc-bdnylx dcRxfY Tag___StyledText-sc-1e1bibo-3 iIxMlD"
    >
      <span
        className="sc-bdnylx cISkos"
      >
        opinion.for
      </span>
    </p>
  </div>
  <div
    className="sc-bdnylx DebateOpinion___StyledAppBox-sc-1ua3st0-2 bQeIg tISUQ"
  />
  <div
    className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 gqMqqJ"
  >
    <div
      className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 geAHBO dzUdRG"
    >
      <div
        className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 jaHnoK Avatar__AvatarInner-m2mkt1-0 bgEkQe"
        style={
          Object {
            "background": "#2d867a",
            "color": undefined,
          }
        }
      >
        <img
          alt="Agui le penseur"
          className="sc-bdnylx Avatar___StyledAppBox-m2mkt1-1 jMFVjo eQJcjv"
          src="<mock-value-for-field-\\"url\\">"
          title="Agui le penseur"
        />
      </div>
      <div
        className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 dXvIkN"
      >
        <p
          className="sc-bdnylx iOYGli"
        >
          Agui le penseur
        </p>
        <p
          className="sc-bdnylx dJflcy"
        >
          Jsuis né dans les favela au brésil
        </p>
      </div>
    </div>
    <div
      className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 dXvIkN bgDJln"
    >
      <h4
        className="sc-bdnylx fzwkzv"
      >
        Je suis pour
      </h4>
      <p
        className="sc-bdnylx fNJNWw"
      >
        <div
          className=" ql-editor"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
            }
          }
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`<DebateOpinion /> when the query is on desktop should render with a read more link 1`] = `
<div
  className="sc-bdnylx dSMDDu DebateOpinion___StyledCard-sc-1ua3st0-0 dYPUuK"
>
  <div
    className="sc-bdnylx Tag__TagInner-sc-1e1bibo-0 Tag___StyledTagInner-sc-1e1bibo-1 gKROGE gJWoeF jxKYEO DebateOpinion___StyledTag-sc-1ua3st0-1 gvZJlt"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    title=""
  >
    <p
      className="sc-bdnylx dcRxfY Tag___StyledText-sc-1e1bibo-3 iIxMlD"
    >
      <span
        className="sc-bdnylx cISkos"
      >
        opinion.for
      </span>
    </p>
  </div>
  <div
    className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 gqMqqJ"
  >
    <div
      className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 geAHBO dzUdRG"
    >
      <div
        className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 jaHnoK Avatar__AvatarInner-m2mkt1-0 bgEkQe"
        style={
          Object {
            "background": "#2d867a",
            "color": undefined,
          }
        }
      >
        <img
          alt="Agui le penseur"
          className="sc-bdnylx Avatar___StyledAppBox-m2mkt1-1 jMFVjo eQJcjv"
          src="<mock-value-for-field-\\"url\\">"
          title="Agui le penseur"
        />
      </div>
      <div
        className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 dXvIkN"
      >
        <p
          className="sc-bdnylx iOYGli"
        >
          Agui le penseur
        </p>
        <p
          className="sc-bdnylx dJflcy"
        >
          Jsuis né dans les favela au brésil
        </p>
      </div>
    </div>
    <div
      className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 dXvIkN bgDJln"
    >
      <h4
        className="sc-bdnylx fzwkzv"
      >
        Je suis pour
      </h4>
      <p
        className="sc-bdnylx fNJNWw"
      >
        <div
          className=" ql-editor"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
            }
          }
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`<DebateOpinion /> when the query is on mobile should render a FOR opinion 1`] = `
<div
  className="sc-bdnylx dsPyrQ DebateOpinion___StyledCard-sc-1ua3st0-0 dYPUuK"
>
  <div
    className="sc-bdnylx Tag__TagInner-sc-1e1bibo-0 Tag___StyledTagInner-sc-1e1bibo-1 gKROGE gJWoeF jxKYEO DebateOpinion___StyledTag-sc-1ua3st0-1 gvZJlt"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    title=""
  >
    <p
      className="sc-bdnylx dcRxfY Tag___StyledText-sc-1e1bibo-3 iIxMlD"
    >
      <span
        className="sc-bdnylx cISkos"
      >
        opinion.for
      </span>
    </p>
  </div>
  <div
    className="sc-bdnylx DebateOpinion___StyledAppBox-sc-1ua3st0-2 bQeIg tISUQ"
  />
  <div
    className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 gqMqqJ"
  >
    <div
      className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 geAHBO dzUdRG"
    >
      <div
        className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 jaHnoK Avatar__AvatarInner-m2mkt1-0 bgEkQe"
        style={
          Object {
            "background": "#2d867a",
            "color": undefined,
          }
        }
      >
        <img
          alt="Agui le penseur"
          className="sc-bdnylx Avatar___StyledAppBox-m2mkt1-1 jMFVjo eQJcjv"
          src="<mock-value-for-field-\\"url\\">"
          title="Agui le penseur"
        />
      </div>
      <div
        className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 dXvIkN"
      >
        <p
          className="sc-bdnylx iOYGli"
        >
          Agui le penseur
        </p>
        <p
          className="sc-bdnylx dJflcy"
        >
          Jsuis né dans les favela au brésil
        </p>
      </div>
    </div>
    <div
      className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 dXvIkN bgDJln"
    >
      <h4
        className="sc-bdnylx fzwkzv"
      >
        Je suis pour
      </h4>
      <p
        className="sc-bdnylx fNJNWw"
      >
        <div
          className=" ql-editor"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
            }
          }
        />
      </p>
      <button
        className="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 bSsEQa engGlZ DebateOpinion___StyledButton-sc-1ua3st0-3 fKiZVV"
        onClick={[Function]}
        type="button"
      >
        capco.module.read_more
      </button>
    </div>
  </div>
</div>
`;

exports[`<DebateOpinion /> when the query is on mobile should render with a read more link 1`] = `
<div
  className="sc-bdnylx dSMDDu DebateOpinion___StyledCard-sc-1ua3st0-0 dYPUuK"
>
  <div
    className="sc-bdnylx Tag__TagInner-sc-1e1bibo-0 Tag___StyledTagInner-sc-1e1bibo-1 gKROGE gJWoeF jxKYEO DebateOpinion___StyledTag-sc-1ua3st0-1 gvZJlt"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    title=""
  >
    <p
      className="sc-bdnylx dcRxfY Tag___StyledText-sc-1e1bibo-3 iIxMlD"
    >
      <span
        className="sc-bdnylx cISkos"
      >
        opinion.for
      </span>
    </p>
  </div>
  <div
    className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 gqMqqJ"
  >
    <div
      className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 geAHBO dzUdRG"
    >
      <div
        className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 jaHnoK Avatar__AvatarInner-m2mkt1-0 bgEkQe"
        style={
          Object {
            "background": "#2d867a",
            "color": undefined,
          }
        }
      >
        <img
          alt="Agui le penseur"
          className="sc-bdnylx Avatar___StyledAppBox-m2mkt1-1 jMFVjo eQJcjv"
          src="<mock-value-for-field-\\"url\\">"
          title="Agui le penseur"
        />
      </div>
      <div
        className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 dXvIkN"
      >
        <p
          className="sc-bdnylx iOYGli"
        >
          Agui le penseur
        </p>
        <p
          className="sc-bdnylx dJflcy"
        >
          Jsuis né dans les favela au brésil
        </p>
      </div>
    </div>
    <div
      className="sc-bdnylx Flex___StyledAppBox-ll88x1-0 dXvIkN bgDJln"
    >
      <h4
        className="sc-bdnylx fzwkzv"
      >
        Je suis pour
      </h4>
      <p
        className="sc-bdnylx fNJNWw"
      >
        <div
          className=" ql-editor"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
            }
          }
        />
      </p>
      <button
        className="sc-bdnylx Button__ButtonInner-sc-1rfi9ir-0 bSsEQa engGlZ DebateOpinion___StyledButton-sc-1ua3st0-3 fKiZVV"
        onClick={[Function]}
        type="button"
      >
        capco.module.read_more
      </button>
    </div>
  </div>
</div>
`;
